[project]
name = "kAIusbot"
version = "0.1.0"
description = "This project is a Streamlit web application that allows users to generate images based on text input."
authors = [
    {name = "kaiusdepaula", email = ""},
]
dependencies = ["streamlit>=1.40.0", "langchain>=0.3.7", "langchain-community>=0.3.7", "scikit-learn>=1.5.2", "langchain-ollama>=0.2.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
